<resources>
    <string name="app_name">Petagram_Recycler_Week3</string>
    <string name="pet_picture">pet picture</string>
    <string name="like_button">Like Button</string>
    <string name="pet_rating_icon">pet rating icon</string>
    <string name="petagram">Petagram</string>
    <string name="title_activity_pet_detail">PetDetailActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="action_bar_menusettings">settings</string>
    <string name="action_bar_menu_star">stars</string>
    <string name="options_menu_acerca_de">Acerca de</string>
    <string name="options_menu_contacto">Contacto</string>
    <string name="about_nombre_completo">Nombre Completo</string>
    <string name="about_correo_electronico">Correo Electrónico</string>
    <string name="about_mensaje">Mensaje</string>
    <string name="about_enviar">Enviar Comentario</string>
    <string name="contact_github_com_camilogo1200">http://github.com/camilogo1200</string>
    <string name="contact_full_name">Creado por Cristhian C Gómez N</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>