<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_star"
        android:icon="@drawable/ic_stars"
        android:title="@string/action_bar_menu_star"
        app:showAsAction="ifRoom" />

    <!-- Settings, should always be in the overflow -->
    <item
        android:id="@+id/action_contact"
        android:icon="@drawable/ic_bone"
        android:title="@string/options_menu_contacto"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_bone"
        android:title="@string/options_menu_acerca_de"
        app:showAsAction="never" />
</menu>