<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/pet_image"
            android:layout_width="340dp"
            android:layout_height="340dp"
            android:contentDescription="@string/pet_picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/bone"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="@string/like_button"
            app:layout_constraintStart_toStartOf="@id/pet_image"
            app:layout_constraintTop_toBottomOf="@id/pet_image"
            app:srcCompat="@drawable/ic_bone" />

        <TextView
            android:id="@+id/pet_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@id/bone"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@id/bone"
            app:layout_constraintTop_toTopOf="@+id/bone"
            tools:text="Catty" />

        <ImageView
            android:id="@+id/rating_icon"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="@string/pet_rating_icon"
            app:layout_constraintBottom_toBottomOf="@id/bone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bone"
            app:srcCompat="@drawable/ic_bone_fill" />

        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@id/bone"
            app:layout_constraintEnd_toStartOf="@id/rating_icon"
            app:layout_constraintTop_toTopOf="@+id/bone"
            tools:text="10" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>